# vision_ros

./: README.MD
src/angle_solver/: CMakeLists.txt  package.xml
src/angle_solver/include/angle_solver/: AngleSolver.hpp
src/angle_solver/src/: AngleSolver.cpp
src/armor/: CMakeLists.txt  README.md  package.xml
src/armor/include/armor/: Armor.hpp
src/armor/src/: Armor.cpp
src/base_interfaces/: CMakeLists.txt  package.xml
src/base_interfaces/msg/: Armors.msg  Chassis.msg  GimbalPose.msg  MatWithTime.msg  Roi.msg  Shooter.msg
src/base_interfaces/srv/: GimbalPose.srv  Trigger.srv
src/binocular/: ArmorDetector.yaml  CMakeLists.txt  Monocular.yaml  README.md  package.xml
src/binocular/include/binocular/: Binocular.h
src/binocular/src/: Binocular.cpp
src/deepdetector/: ArmorDetector.yaml  CMakeLists.txt  DeepDetector.yaml  README.md  package.xml
src/deepdetector/include/deepdetector/: DeepDetector.hpp  RosDeepDetector.hpp
src/deepdetector/launch/: deepdetector.launch.py
src/deepdetector/model/: 0710_800x448.onnx  README.md  model.onnx
src/deepdetector/src/: DeepDetector.cpp  RosDeepDetector.cpp
src/libbase/: CMakeLists.txt  package.xml
src/libbase/include/libbase/: common.h
src/libbase/src/: TimeTester.cpp  common.cpp
src/lightoptimizer/: CMakeLists.txt  package.xml
src/lightoptimizer/include/lightoptimizer/: LightOptimizer.hpp
src/lightoptimizer/src/: LightOptimizer.cpp
src/port/: CMakeLists.txt  package.xml
src/port/include/port/: CanPort.hpp  SerialPort.hpp  Transport.h  WMJProtocol.h
src/port/src/: CanPort.cpp  SerialPort.cpp
src/ros2_usbcapture/: CMakeLists.txt  package.xml
src/ros2_usbcapture/include/ros2_usbcapture/: RosNode.h  UsbCaptureSystem.h  test_get_image.h
src/ros2_usbcapture/src/: RosNode.cpp  test_get_image.cpp
src/selector/: CMakeLists.txt  README.md  package.xml
src/selector/include/selector/: Selector.hpp
src/selector/src/: Selector.cpp
src/top_aimer/: CMakeLists.txt  TopAimer.yaml  package.xml
src/top_aimer/include/top_aimer/: Aimer.hpp  RosAimer.hpp
src/top_aimer/src/: Aimer.cpp  RosAimer.cpp
